2002-08-14  David Hyatt  <hyatt@apple.com>

	Ensure that a rendering object gets built for <fieldset>
	elements.  Content inside a <fieldset> was being discarded
	and not rendered.

	This fixes the top frame on blogger comment posting so that
	it shows up properly.
	
        * khtml/html/html_formimpl.cpp:
        (HTMLFieldSetElementImpl::attach):
        * khtml/html/html_formimpl.h:

2002-08-14  Darin Adler  <darin@apple.com>

	Fix the build.

        * khtml/ecma/kjs_html.cpp: (KJS::HTMLDocument::putValue):
	Add braces and fix a syntax error.

        * kwq/mac-encodings.txt: Add comments. Make utf-16 be a synonym for
	utf-8 rather than having it actually try to treat things as 16-bit.
	We will have to revisit this, but for now it makes zingermans.com work again.

        * kwq/make-charset-table.pl: Allow comments.

2002-08-14  Maciej Stachowiak  <mjs@apple.com>

	Fixed a JavaScript object leak that was plaguing ign.com and
	livepage.apple.com, among other things.
	
        * khtml/ecma/kjs_html.cpp:
        (KJS::HTMLDocument::putValue): Create a Value wrapper for a newly allocated
	DOMNode object that's not used past this function so it gets GC'd properly.
        (KJS::HTMLElement::putValue): Likewise.

2002-08-14  Maciej Stachowiak  <mjs@apple.com>

        * khtml/ecma/kjs_window.cpp: Fix to build clean after
	JavaScriptCore live class changes (this way of handling it is kind
	of a hack, but kjs is unhappy to have Boolean defined so it can't
	unconditionally include CoreFoundation.h in collector.h; will fix
	better later).

2002-08-13  Maciej Stachowiak  <mjs@apple.com>

	Add the ability to determine the classes of live JavaScript
	objects, to help with leak fixing.

        * kwq/WebCoreJavaScript.h:
        * kwq/WebCoreJavaScript.mm:
        (+[WebCoreJavaScript liveObjectClasses]):

2002-08-13  David Hyatt  <hyatt@apple.com>

	An initial implementation of percentage height table cells.
	This implementation will properly distribute space among