@@ -1,5 +1,14 @@
 2002-08-14  David Hyatt  <hyatt@apple.com>
 
+	Fix marginwidth and marginheight on the <body> element.
+	These attributes were not applying the correct margins,
+	which would cause many many pages to mis-render!
+	
+        * khtml/html/html_baseimpl.cpp:
+        (HTMLBodyElementImpl::parseAttribute):
+
+2002-08-14  David Hyatt  <hyatt@apple.com>
+
 	Ensure that a rendering object gets built for <fieldset>
 	elements.  Content inside a <fieldset> was being discarded
 	and not rendered.
